update jaxen from 1.1 beta4 to 1.1.1 add pmd to find problems fix first errors that was reported by pmd
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11010 b35dd754-fafc-0310-a699-88a17e54d16e